--- a/src/app/modules/listaFilmes/listaFilmes.html
+++ b/src/app/modules/listaFilmes/listaFilmes.html
@@ -17,6 +17,6 @@
 
     <lista 
         busca="vm.buscaFilme"
-        filmes="vm.filmes" 
-        on-filme-click="vm.clicouNoFilme(filme)"></lista>
+        filmes="vm.filmes"
+        on-filme-click="vm.editarFilme(filme)"></lista>
 </div>
