--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,1 +1,8 @@
 @import '~bootstrap/dist/css/bootstrap.css';
+
+.filmes {
+    margin: 10px;
+    padding: 10px;
+    // background-color: 
+    border: 1px solid #ccc;
+}
