--- a/src/app/modules/listaFilmes/listaFilmes.html
+++ b/src/app/modules/listaFilmes/listaFilmes.html
@@ -15,6 +15,8 @@
         <p> Deu ruim -> {{ vm.hasError }}</p>
     </div>
 
+    <ui-view name="lista"></ui-view>
+
     <lista 
         busca="vm.buscaFilme"
         filmes="vm.filmes"
