--- a/src/app/modules/filmesForm/filmesForm.html
+++ b/src/app/modules/filmesForm/filmesForm.html
@@ -1,19 +1,54 @@
 <h3>Cadastro/alteração de um filme</h3>
 
+<!-- 
+    Nome, 
+    categoria
+    ano
+    lançamento
+    arrecadação
+ -->
+
+<div class="row">
+    <div class="form-group col-md-6">
+        <label>Nome</label>
+        <input type="text" class="form-control" ng-model="vm.filme.nome">
+    </div>
+    
+    <div class="form-group col-md-6">
+        <label>Categoria</label>
+        <select class="form-control" ng-options="categoria.valor as categoria.nome for categoria in vm.categorias" ng-model="vm.filme.categoria">
+            <option value="">Selecione uma categoria...</option>
+        </select>
+    </div>
+    
+    <div class="form-group col-md-6">
+        <label>Ano</label>
+        <input type="text" class="form-control" ng-model="vm.filme.ano">
+    </div>
+    
+    <div class="form-group col-md-6">
+        <label>Data de lançamento</label>
+        <input type="text" class="form-control" ng-model="vm.filme.lancamento">
+    </div>
+
+    <div class="form-group col-md-6">
+        <label>Arrecadação</label>
+        <input type="number" class="form-control" ng-model="vm.filme.arrecadacao">
+    </div>
+</div>
+
 <pre>
     {{ vm.filme | json }}
 </pre>
 
-
-<pre>
-    {{ vm.categorias | json }}
-</pre>
-
-
 <div>
+    <button type="button"
+        class="btn btn-primary"
+        ng-click="vm.salvarFilme(vm.filme)"
+    ><i class="glyphicon glyphicon-send"></i> Salvar</button>
     <button 
         type="button" 
-        class="btn btn-primary"
+        class="btn btn-default"
         ui-sref="filmes"
-    >Voltar</button>
+    ><i class="glyphicon glyphicon-hand-left"></i> Voltar</button>
 </div>
