--- a/src/app/modules/listaFilmes/listaFilmes.html
+++ b/src/app/modules/listaFilmes/listaFilmes.html
@@ -19,5 +19,7 @@
     <lista 
         busca="vm.buscaFilme"
         filmes="vm.filmes"
-        on-filme-click="vm.editarFilme(filme)"></lista>
+        on-edit-filme-click="vm.editarFilme(filme)"
+        on-remove-filme-click="vm.removerFilme(filmeId)"
+    ></lista>
 </div>
