--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -14,3 +14,15 @@
         content: " *";
     }
 }
+
+.form-group {
+    min-height: 89px;
+}
+
+.input-error {
+    color: #a94442;
+}
+
+.form-control-feedback {
+    padding-right: 16px;
+}
